[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/UI/TitleScreen/ExitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/TitleScreen/PlayButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/TitleScreen/OptionButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/Fonts/8bitOperatorPlus-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Sprites/Player/bun_bun_brown_still.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/TitleScreen/TitleScreen.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 23
extra_spacing_char = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("FadePlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadePlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="TitleScreen" type="CanvasLayer"]
layer = 2
script = ExtResource( 7 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 280.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.105882, 0.745098, 0.662745, 1 )
custom_constants/shadow_offset_y = 1
text = "CLOWNFIESTA"
align = 1

[node name="Title" type="TextureRect" parent="Menu"]
visible = false
margin_right = 280.0

[node name="CentreRow" type="HBoxContainer" parent="Menu"]
margin_top = 36.0
margin_right = 280.0
margin_bottom = 140.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CentreRow"]
margin_right = 138.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="PlayButton" type="Button" parent="Menu/CentreRow/Buttons"]
margin_top = 9.0
margin_right = 138.0
margin_bottom = 34.0
rect_min_size = Vector2( 80, 25 )
rect_pivot_offset = Vector2( -136, -64 )
focus_mode = 1
action_mode = 0
enabled_focus_mode = 1
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/CentreRow/Buttons/PlayButton"]
margin_right = 38.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.623529, 0.0823529, 0.0823529, 1 )
custom_constants/shadow_offset_y = 1
text = "Play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadePlayer" type="AnimationPlayer" parent="Menu/CentreRow/Buttons/PlayButton"]
anims/fade_in = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Menu/CentreRow/Buttons/PlayButton/FadePlayer"]
visible = false
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 3 )]
margin_top = 39.0
margin_right = 138.0
margin_bottom = 64.0
rect_min_size = Vector2( 80, 25 )

[node name="ExitButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 1 )]
margin_top = 69.0
margin_right = 138.0
margin_bottom = 94.0
rect_min_size = Vector2( 80, 25 )

[node name="CenterContainer" type="CenterContainer" parent="Menu/CentreRow"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="Menu/CentreRow/CenterContainer"]
margin_left = 53.0
margin_top = 36.0
margin_right = 85.0
margin_bottom = 68.0
texture = ExtResource( 5 )
[connection signal="level_loaded" from="Menu/CentreRow/Buttons/PlayButton" to="." method="_on_PlayButton_level_loaded"]
[connection signal="pressed" from="Menu/CentreRow/Buttons/PlayButton" to="Menu/CentreRow/Buttons/PlayButton" method="_on_PlayButton_pressed"]
[connection signal="animation_finished" from="Menu/CentreRow/Buttons/PlayButton/FadePlayer" to="Menu/CentreRow/Buttons/PlayButton" method="_on_FadePlayer_animation_finished"]
[connection signal="pressed" from="Menu/CentreRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
